k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api-deployment
  namespace: hard-multi-tenancy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-api
  template:
    metadata:
      labels:
        app: sample-api
    spec:
      containers:
      - name: sample-api
        image: sample-api-go:1.0
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "100m"
      volumes:
      - name: sample-api-storage
        persistentVolumeClaim:
          claimName: sample-api-pvc
