k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api-service
spec:
  selector:
    app: sample-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
