k3s/network-police.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-api-network-policy
  namespace: mynamespace
spec:
  podSelector:
    matchLabels:
      app: sample-api
  policyTypes:
  - Ingress
  - Egress
  # É possível adicionar mais politicas de acordo com a necessidade
